--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,13 @@
 server:
   port: 10000
+
+usage:
+  rules:
+    - selector: "/esp4g.calc.CalcService/AddAsync"
+      allow_unregistered_calls: true
+
+    - selector: "/esp4g.calc.CalcService/AddAll"
+      registered_api_keys:
+        - guest
+
+    - selector: "/esp4g.calc.CalcService/AddDeffered"
