Add client-side streaming proxy test

--- a/esp4g-test/config.yaml
+++ b/esp4g-test/config.yaml
@@ -2,3 +2,6 @@ usage:
   rules:
     - selector: /eps4g.ping.PingService/Send
       allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.CalcService/AddAll
+      allow_unregistered_calls: true
