Add server-side streaming proxy test

--- a/esp4g-test/config.yaml
+++ b/esp4g-test/config.yaml
@@ -5,3 +5,6 @@ usage:
 
     - selector: /esp4g.calc.CalcService/AddAll
       allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.CalcService/AddDeffered
+      allow_unregistered_calls: true
