Add bidirectional streaming proxy test

--- a/esp4g-test/config.yaml
+++ b/esp4g-test/config.yaml
@@ -8,3 +8,6 @@ usage:
 
     - selector: /esp4g.calc.CalcService/AddDeffered
       allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.CalcService/AddAsync
+      allow_unregistered_calls: true
