--- a/examples/ping/config.yaml
+++ b/examples/ping/config.yaml
@@ -6,7 +6,7 @@ logs:
     response_time_histogram:
       name: "grpc_response_time_seconds"
       help: "gRPC latency distributions."
-      buckets: [0.001, 0.01, 0.025, 0.05, 0.1, 0.25, 0.5, 1, 2.5, 5, 10]
+      buckets: [0.001, 0.002, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009, 0.01, 0.025, 0.05, 0.1, 0.25, 0.5, 1, 2.5, 5, 10]
     request_bytes_histogram:
       name: "grpc_request_size_bytes"
       help: "gRPC request content size distributions."
