--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -1,20 +1,20 @@
 logs:
   logging: true
   prometheus:
-    enable: true
-    address: ":8080"
-    response_time_histogram:
-      name: "grpc_response_time_seconds"
-      help: "gRPC latency distributions."
-      buckets: [0.001, 0.002, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009, 0.01, 0.025, 0.05, 0.1, 0.25, 0.5, 1, 2.5, 5, 10]
-    request_bytes_histogram:
-      name: "grpc_request_size_bytes"
-      help: "gRPC request content size distributions."
-      buckets: [1, 2, 4, 8, 16, 32, 64, 128]
-    response_bytes_histogram:
-      name: "grpc_response_size_bytes"
-      help: "gRPC response content size distributions."
-      buckets: [1, 2, 4, 8, 16, 32, 64, 128]
+    port: 8080
+    histograms:
+      response_seconds:
+        name: "grpc_response_seconds"
+        help: "gRPC latency distributions."
+        buckets: [0.001, 0.002, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009, 0.01, 0.025, 0.05, 0.1, 0.25, 0.5, 1, 2.5, 5, 10]
+      request_bytes:
+        name: "grpc_request_bytes"
+        help: "gRPC request content size distributions."
+        buckets: [1, 2, 4, 8, 16, 32, 64, 128]
+      response_bytes:
+        name: "grpc_response_bytes"
+        help: "gRPC response content size distributions."
+        buckets: [1, 2, 4, 8, 16, 32, 64, 128]
 
 usage:
   rules:
