--- a/esp4g-test/yaml/allow-keys.yaml
+++ b/esp4g-test/yaml/allow-keys.yaml
@@ -6,6 +6,12 @@ authentication:
 
 usage:
   rules:
+    - selector: /esp4g.ping.HealthCheckService/Check
+      allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.HealthCheckService/Check
+      allow_unregistered_calls: true
+
     - selector: /esp4g.ping.PingService/Send
       requirements:
         - provider_id: local
