--- a/esp4g-test/yaml/complex.yaml
+++ b/esp4g-test/yaml/complex.yaml
@@ -9,6 +9,12 @@ authentication:
 
 usage:
   rules:
+    - selector: /esp4g.ping.HealthCheckService/Check
+      allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.HealthCheckService/Check
+      allow_unregistered_calls: true
+
     - selector: /esp4g.ping.PingService/Send
       allow_unregistered_calls: true
 
