--- a/esp4g-test/yaml/deny.yaml
+++ b/esp4g-test/yaml/deny.yaml
@@ -1,5 +1,11 @@
 usage:
   rules:
+    - selector: /esp4g.ping.HealthCheckService/Check
+      allow_unregistered_calls: true
+
+    - selector: /esp4g.calc.HealthCheckService/Check
+      allow_unregistered_calls: true
+
     - selector: /esp4g.ping.PingService/Send
     - selector: /esp4g.calc.CalcService/AddAll
     - selector: /esp4g.calc.CalcService/AddDeffered
