--- a/esp4g-test/yaml/allow.yaml
+++ b/esp4g-test/yaml/allow.yaml
@@ -1,6 +1,6 @@
 usage:
   rules:
-    - selector: /eps4g.ping.PingService/Send
+    - selector: /esp4g.ping.PingService/Send
       allow_unregistered_calls: true
 
     - selector: /esp4g.calc.CalcService/AddAll
