--- a/esp4g-test/yaml/complex.yaml
+++ b/esp4g-test/yaml/complex.yaml
@@ -9,7 +9,7 @@ authentication:
 
 usage:
   rules:
-    - selector: /eps4g.ping.PingService/Send
+    - selector: /esp4g.ping.PingService/Send
       allow_unregistered_calls: true
 
     - selector: /esp4g.calc.CalcService/AddAll
