--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -28,7 +28,7 @@ usage:
     - selector: "/esp4g.benchmark.UnaryService/Send"
       allow_unregistered_calls: true
 
-    - selector: "/eps4g.ping.PingService/Send"
+    - selector: "/esp4g.ping.PingService/Send"
       allow_unregistered_calls: true
 
     - selector: "/esp4g.calc.CalcService/AddAsync"
